src/corelib/io/qdatastream.cpp
@@ -526,7 +526,7 @@ void QDataStream::setByteOrder(ByteOrder bo)
     \value Qt_5_3 Same as Qt_5_2
     \value Qt_5_4 Version 16 (Qt 5.4)
     \value Qt_5_5 Same as Qt_5_4
-    \value Qt_5_6 Same as Qt_5_4
+    \value Qt_5_6 Version 17 (Qt 5.6)
     \omitvalue Qt_DefaultCompiledVersion
 
     \sa setVersion(), version()
